Hide username in hamburger menu and fix issue with dropdown items not showing initially

--- a/source/assets/stylesheets/_main.scss
+++ b/source/assets/stylesheets/_main.scss
@@ -224,6 +224,7 @@ li.key-point {
 @media (max-width: $medium-breakpoint) {
   .top-bar-section {
     left: 0 !important;
+    padding-bottom: 1em;
 
     ul {
       float: none !important;
@@ -236,6 +237,8 @@ li.key-point {
           max-width: 100% !important;
           position: relative !important;
           left: 0 !important;
+          top: 0 !important;
+          display: block !important;
           border: 0;
           background: none;
 
@@ -256,6 +259,10 @@ li.key-point {
     }
 
     .icon-sprite {
+      display: none;
+    }
+
+    .user-display-name {
       display: none;
     }
   }
